Small update and cleanup to Quark BSP
 - Switch to 4.0 kernel release branch
 - Follow releases and update to 4.0.5 version
 - Clean up some BSP details

Signed-off-by: Jussi Laako <jussi.laako@linux.intel.com>

--- a/conf/machine/quark.conf
+++ b/conf/machine/quark.conf
@@ -10,9 +10,9 @@ require conf/machine/include/x86-base.inc
 include conf/machine/include/tune-i586.inc
 
 MACHINE_FEATURES += "efi usb pci"
-EFI_PROVIDER = "gummiboot"
+#EFI_PROVIDER = "gummiboot"
 
-APPEND += "security=smack console=ttyS1,115200n8 earlycon=uart8250,mmio32,0x8010f000,115200n8 reboot=efi,warm apic=debug rw"
+APPEND += "console=ttyS1,115200n8 earlycon=uart8250,mmio32,0x8010f000,115200n8 reboot=efi,warm apic=debug rw"
 
 SERIAL_CONSOLE = "115200 ttyS1"
 #SERIAL_CONSOLES = "115200;ttyS0 115200;ttyS1"
