Fix conflicting kernel name and version on the BSP
Signed-off-by: Jussi Laako <jussi.laako@linux.intel.com>

--- a/conf/machine/atom.conf
+++ b/conf/machine/atom.conf
@@ -3,8 +3,8 @@
 
 #@DESCRIPTION: Machine configuration for Atom systems
 
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
-PREFERRED_VERSION_linux-yocto ?= "4.%"
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-ostro"
+PREFERRED_VERSION_linux-yocto ?= "4.1%"
 
 #DEFAULTTUNE = "core2-32"
 
