--- a/conf/machine/atomup.conf
+++ b/conf/machine/atomup.conf
@@ -3,8 +3,8 @@
 
 #@DESCRIPTION: Machine configuration for Atom systems
 
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
-PREFERRED_VERSION_linux-yocto ?= "4.%"
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-ostro"
+PREFERRED_VERSION_linux-yocto ?= "4.1%"
 
 #DEFAULTTUNE = "core2-32"
 
