--- a/conf/machine/quark.conf
+++ b/conf/machine/quark.conf
@@ -3,8 +3,8 @@
 
 #@DESCRIPTION: Machine configuration for Quark systems
 
-PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto"
-PREFERRED_VERSION_linux-yocto ?= "4.%"
+PREFERRED_PROVIDER_virtual/kernel ?= "linux-ostro"
+PREFERRED_VERSION_linux-yocto ?= "4.1%"
 
 require conf/machine/include/x86-base.inc
 include conf/machine/include/tune-i586.inc
