edison: avoid u-boot package name conflict
Avoid u-boot package name conflict with other layers by renaming the
Edison specific u-boot recipes to reflect their specificity.

Signed-off-by: Jussi Laako <jussi.laako@linux.intel.com>

--- a/meta-edison-bsp/conf/machine/edison.conf
+++ b/meta-edison-bsp/conf/machine/edison.conf
@@ -16,12 +16,12 @@ IMAGE_FSTYPES = "tar.bz2 ext4 toflash"
 
 # Bootloader config
 
-PREFERRED_PROVIDER_virtual/bootloader ?=  "u-boot"
-PREFERRED_VERSION_u-boot ?= "2014.04-1"
-PREFERRED_VERSION_u-boot-fw-utils ?= "2014.04-1"
+PREFERRED_PROVIDER_virtual/bootloader ?=  "u-boot-edison"
+PREFERRED_VERSION_u-boot-edison ?= "2014.04-1"
+PREFERRED_VERSION_u-boot-fw-utils-edison ?= "2014.04-1"
 UBOOT_MACHINE = "edison_config"
 
-MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "u-boot u-boot-fw-utils kernel-modules sst-fw mcu-fw-bin mcu-fw-load"
+MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "u-boot-edison u-boot-fw-utils-edison kernel-modules sst-fw mcu-fw-bin mcu-fw-load"
 
 # Kernel config
 
