--- a/meta-edison-bsp/conf/machine/edison.conf
+++ b/meta-edison-bsp/conf/machine/edison.conf
@@ -50,5 +50,5 @@ XSERVER = "xserver-xorg \
            xf86-input-evdev \
            xf86-video-dummy"
 
-INITRAMFS_IMAGE ?= "core-image-initramfs"
+INITRAMFS_IMAGE ?= "core-image-initramfs-edison"
 INITRAMFS_IMAGE_BUNDLE ?= "1"
