Re-enable image rootfs size parameter for Edison
In addition, reset IMAGE_ROOTFS_EXTRA_SPACE in the ostro-image bbappend
recipe.

Signed-off-by: Jussi Laako <jussi.laako@linux.intel.com>

--- a/meta-edison-bsp/conf/machine/edison.conf
+++ b/meta-edison-bsp/conf/machine/edison.conf
@@ -12,7 +12,7 @@ IMAGE_FSTYPES = "tar.bz2 ext4 toflash"
 # we want rootfs size of 1572864
 # rootfs_rpm.bbclass adds 51200
 # so adjust to 1572864 - 51200
-#IMAGE_ROOTFS_SIZE = "1521664"
+IMAGE_ROOTFS_SIZE = "1521664"
 
 # Bootloader config
 
