edison.conf: prepare for new way of increasing Ostro image sizes
This overrides a variable that ostro-image will use to increase the image
size only if the machine definition does not set something itself.

A better solution would be to control the amount of space added by
rootfs_rpm.bbclass, but that depends on changing OE-core, which is not
an option at this point in time.

Signed-off-by: Patrick Ohly <patrick.ohly@intel.com>

--- a/meta-edison-bsp/conf/machine/edison.conf
+++ b/meta-edison-bsp/conf/machine/edison.conf
@@ -13,6 +13,11 @@ IMAGE_FSTYPES = "tar.bz2 ext4 toflash"
 # rootfs_rpm.bbclass adds 51200
 # so adjust to 1572864 - 51200
 IMAGE_ROOTFS_SIZE = "1521664"
+# Also, Ostro OS is not allowed to ask for additional space either.
+# TODO: this should be a variable from OE-core which gets
+# added by rootfs_rpm.bbclass, instead of doing the increase twice
+# and having to substract the 51200 value above.
+OSTRO_IMAGE_ROOTFS_EXTRA_SPACE = ""
 
 # Bootloader config
 
