ostro-image.bbappend: replace by MACHINE_ESSENTIAL_EXTRA_RDEPENDS in layer.conf
We are about to have multiple different Ostro images, so a single
.bbappend would not be good enough anymore. Better use the normal
mechanism, extending MACHINE_ESSENTIAL_EXTRA_RDEPENDS, for installing
additional packages.

We have to do that in the layer.conf with machine overrides because we cannot
extend the upstream machine definitions. We could do it for Edison, but
for the sake of consistency, systemd-watchdog is also added to the layer.conf.

Signed-off-by: Patrick Ohly <patrick.ohly@intel.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -9,3 +9,18 @@ BBFILE_COLLECTIONS += "quark-bsp"
 BBFILE_PATTERN_quark-bsp := "^${LAYERDIR}/"
 BBFILE_PRIORITY_quark-bsp = "6"
 
+# Normally one would use MACHINE_ESSENTIAL_EXTRA_RDEPENDS in a machine
+# config, but we use existing machine configurations and thus cannot
+# do that. Extending via layer config with machine override is close
+# enough.
+
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_intel-corei7-64 = " \
+    spi-minnowmax-board \
+"
+
+# Could be also in edison.conf, kept here for sake of consistency.
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_edison = " systemd-watchdog"
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_beaglebone = " systemd-watchdog"
+# Actually only relevant on MinnowMax, but causes little harm
+# elsewhere (unnecessary sleep wakeup every 45 seconds).
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_intel-corei7-64 = " systemd-watchdog"
