--- a/recipes-kernel/linux-yocto/linux-yocto/security.cfg
+++ b/recipes-kernel/linux-yocto/linux-yocto/security.cfg
@@ -1,4 +1,5 @@
 CONFIG_CC_STACKPROTECTOR=y
+CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_DEBUG_STACKOVERFLOW=y
 CONFIG_DEFAULT_MMAP_MIN_ADDR=65536
 CONFIG_RANDOMIZE_BASE=y
@@ -11,3 +12,6 @@ CONFIG_SECURITY_YAMA_STACKED=y
 CONFIG_IMA_APPRAISE_SIGNED_INIT=y
 CONFIG_IMA_LSM_RULES=y
 CONFIG_INTEGRITY_AUDIT=y
+# CONFIG_DEVKMEM is not set
+# CONFIG_IKCONFIG_PROC is not set
+# CONFIG_PROC_KCORE is not set
