--- a/recipes-kernel/linux-yocto/linux-yocto/security.cfg
+++ b/recipes-kernel/linux-yocto/linux-yocto/security.cfg
@@ -15,3 +15,7 @@ CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_DEVKMEM is not set
 # CONFIG_IKCONFIG_PROC is not set
 # CONFIG_PROC_KCORE is not set
+CONFIG_NF_DEFRAG_IPV6=m
+CONFIG_NF_CONNTRACK_IPV6=m
+# CONFIG_NF_NAT_IPV6 is not set
+# CONFIG_IP6_NF_NAT is not set
