--- a/recipes-kernel/linux-yocto/linux-yocto/sensors.cfg
+++ b/recipes-kernel/linux-yocto/linux-yocto/sensors.cfg
@@ -2,3 +2,34 @@ CONFIG_BMP085=y
 CONFIG_BMP085_I2C=m
 CONFIG_SENSORS_HMC5843=m
 CONFIG_SENSORS_HMC5843_I2C=m
+CONFIG_SENSORS_LM75=m
+CONFIG_INPUT_POLLDEV=m
+CONFIG_INPUT_MISC=y
+CONFIG_INPUT_BMA150=m
+CONFIG_INPUT_MPU3050=m
+CONFIG_INPUT_ADXL34X=m
+CONFIG_INPUT_ADXL34X_I2C=m
+CONFIG_INPUT_ADXL34X_SPI=m
+CONFIG_SENSORS_ISL29018=m
+CONFIG_SENSORS_ISL29028=m
+CONFIG_TSL2583=m
+CONFIG_TSL2x7x=m
+CONFIG_SENSORS_HMC5843_SPI=m
+CONFIG_BMC150_ACCEL=m
+CONFIG_MMA8452=m
+CONFIG_MMA9551_CORE=m
+CONFIG_MMA9551=m
+CONFIG_MMA9553=m
+CONFIG_BMG160=m
+CONFIG_SI7005=m
+CONFIG_SI7020=m
+CONFIG_ISL29125=m
+CONFIG_LTR501=m
+CONFIG_TCS3414=m
+CONFIG_BMP280=m
+CONFIG_MPL115=m
+CONFIG_MS5611=m
+CONFIG_MS5611_I2C=m
+CONFIG_MS5611_SPI=m
+CONFIG_T5403=m
+CONFIG_MLX90614=m
