--- a/recipes-kernel/linux-yocto/linux-yocto/sensors.cfg
+++ b/recipes-kernel/linux-yocto/linux-yocto/sensors.cfg
@@ -33,3 +33,40 @@ CONFIG_MS5611_I2C=m
 CONFIG_MS5611_SPI=m
 CONFIG_T5403=m
 CONFIG_MLX90614=m
+# CONFIG_INPUT_BMA150 is not set
+CONFIG_LIS3L02DQ=m
+CONFIG_KXSD9=m
+CONFIG_IIO_ST_ACCEL_3AXIS=m
+CONFIG_IIO_ST_ACCEL_I2C_3AXIS=m
+CONFIG_IIO_ST_ACCEL_SPI_3AXIS=m
+CONFIG_AD_SIGMA_DELTA=m
+CONFIG_AD7266=m
+CONFIG_AD7298=m
+CONFIG_AD7923=m
+CONFIG_AD7791=m
+CONFIG_AD7793=m
+CONFIG_AD7476=m
+CONFIG_AD7887=m
+CONFIG_MAX1363=m
+CONFIG_TI_ADC081C=m
+CONFIG_IIO_ST_SENSORS_I2C=m
+CONFIG_IIO_ST_SENSORS_SPI=m
+CONFIG_IIO_ST_SENSORS_CORE=m
+CONFIG_MCP4725=m
+CONFIG_ADIS16136=m
+CONFIG_IIO_ST_GYRO_3AXIS=m
+CONFIG_IIO_ST_GYRO_I2C_3AXIS=m
+CONFIG_IIO_ST_GYRO_SPI_3AXIS=m
+CONFIG_ITG3200=m
+CONFIG_ADIS16400=m
+CONFIG_ADIS16480=m
+CONFIG_IIO_ADIS_LIB=m
+CONFIG_IIO_ADIS_LIB_BUFFER=y
+CONFIG_INV_MPU6050_IIO=m
+CONFIG_ADJD_S311=m
+CONFIG_SENSORS_TSL2563=m
+CONFIG_VCNL4000=m
+CONFIG_AK8975=m
+CONFIG_IIO_ST_MAGN_3AXIS=m
+CONFIG_IIO_ST_MAGN_I2C_3AXIS=m
+CONFIG_IIO_ST_MAGN_SPI_3AXIS=m
