Add the mpu6050/9250 i2c kernel modules to provide IRQ resource
In order to enable the MPU6050/9250 Accel sensor device driver, the IRQ platform data is needed,
use another kernel module to provide the IRQ resource for the device drivers

The below code is referenced:
https://github.com/MinnowBoard/minnow-max-extras/tree/master/modules/mpu6050

Signed-off-by: Yong Li <yong.b.li@intel.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -16,6 +16,15 @@ BBFILE_PRIORITY_quark-bsp = "6"
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_intel-corei7-64 = " \
     spi-minnowmax-board \
+    i2c-minnowmax-board \
+"
+
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_intel-quark = " \
+    i2c-quark-board \
+"
+
+MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_intel-edison = " \
+    i2c-edison-board \
 "
 
 # Could be also in edison.conf, kept here for sake of consistency.
