Add Atmel 802.15.4 kernel module to Galileo image
To support Atmel 802.15.4 chip,
Atmel 802.15.4 kernel module need to be added to image.

Signed-off-by: Wu zheng <wu.zheng@intel.com>

--- a/conf/layer.conf
+++ b/conf/layer.conf
@@ -20,6 +20,7 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_intel-corei7-64 = " \
 "
 
 MACHINE_ESSENTIAL_EXTRA_RDEPENDS_append_intel-quark = " \
+    spi-quark-board \
     i2c-quark-board \
 "
 
