Fix Edison boot issue after oe-core update
Fix boot failure on Intel Edison after merging set of changes from
upstream oe-core.

For yet unknown reason, kernel fails to transfer over to rootfs when
initramfs is present. Possibly the produced initramfs is somehow
incompatible with the older kernel Edison is using. As a workaround
disable recovery initramfs for now.

Fixes: IOTOS-1292

Signed-off-by: Jussi Laako <jussi.laako@linux.intel.com>

--- a/meta-edison-bsp/conf/machine/edison.conf
+++ b/meta-edison-bsp/conf/machine/edison.conf
@@ -70,5 +70,5 @@ XSERVER = "xserver-xorg \
            xf86-input-evdev \
            xf86-video-dummy"
 
-INITRAMFS_IMAGE ?= "core-image-initramfs-edison"
-INITRAMFS_IMAGE_BUNDLE ?= "1"
+#INITRAMFS_IMAGE ?= "core-image-initramfs-edison"
+#INITRAMFS_IMAGE_BUNDLE ?= "1"
