--- a/recipes-kernel/linux-yocto/linux-yocto/sensors.cfg
+++ b/recipes-kernel/linux-yocto/linux-yocto/sensors.cfg
@@ -70,3 +70,6 @@ CONFIG_AK8975=m
 CONFIG_IIO_ST_MAGN_3AXIS=m
 CONFIG_IIO_ST_MAGN_I2C_3AXIS=m
 CONFIG_IIO_ST_MAGN_SPI_3AXIS=m
+CONFIG_MMA7455=m
+CONFIG_MMA7455_I2C=m
+
