--- a/recipes-kernel/linux-yocto/linux-yocto/sensors.cfg
+++ b/recipes-kernel/linux-yocto/linux-yocto/sensors.cfg
@@ -71,3 +71,6 @@ CONFIG_IIO_ST_MAGN_3AXIS=m
 CONFIG_IIO_ST_MAGN_I2C_3AXIS=m
 CONFIG_IIO_ST_MAGN_SPI_3AXIS=m
 CONFIG_BH1750=m
+CONFIG_MMA7455=m
+CONFIG_MMA7455_I2C=m
+
