--- a/meta-edison-bsp/conf/machine/edison.conf
+++ b/meta-edison-bsp/conf/machine/edison.conf
@@ -36,8 +36,8 @@ OSTRO_IMAGE_ROOTFS_EXTRA_SPACE = ""
 # Bootloader config
 
 PREFERRED_PROVIDER_virtual/bootloader ?=  "u-boot-edison"
-PREFERRED_VERSION_u-boot-edison ?= "2014.04-1"
-PREFERRED_VERSION_u-boot-fw-utils-edison ?= "2014.04-1"
+PREFERRED_VERSION_u-boot-edison ?= "2015.10"
+PREFERRED_VERSION_u-boot-fw-utils-edison ?= "2015.10"
 UBOOT_MACHINE = "edison_config"
 
 MACHINE_ESSENTIAL_EXTRA_RRECOMMENDS += "u-boot-edison u-boot-fw-utils-edison kernel-modules sst-fw mcu-fw-bin mcu-fw-load"
@@ -46,7 +46,7 @@ MACHINE_ESSENTIAL_EXTRA_RDEPENDS += "bluetooth-rfkill-event"
 # Kernel config
 
 PREFERRED_PROVIDER_virtual/kernel ?= "linux-yocto-edison"
-PREFERRED_VERSION_linux-yocto-edison = "3.10%"
+PREFERRED_VERSION_linux-yocto-edison = "3.19%"
 KERNEL_IMAGETYPE = "bzImage"
 SERIAL_CONSOLES ?= "115200;ttyMFD2 115200;ttyGS0"
 
